--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,17 @@ jobs:
     - name: Create static site
       run: |
         mkdir -p docs
-        cp README.md docs/index.md
-        cp templates/index.html docs/
-        cp -r static docs/ 2>/dev/null || true
+        cp README.md docs/
+        cp index.html docs/
+        cp CNAME docs/
+        
+        if [ -d "templates" ]; then
+          cp -r templates docs/
+        fi
+        
+        if [ -d "static" ]; then
+          cp -r static docs/
+        fi
         
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
