--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           mkdir -p docs
           cp README.md docs/
-          cp index.html docs/
+          # НЕ копируем корневой index.html - используем только docs/index.html
           cp CNAME docs/
           touch docs/.nojekyll
           
