🤖 астройка Telegram Mini App для Farming Game
- Создан полнофункциональный Telegram Mini App
- бновлен бот с поддержкой Mini App и улучшенным интерфейсом
- обавлены эмодзи для всех культур и погодных условий
- Создана подробная документация по настройке
- обавлены инструкции по быстрому запуску
- бновлен workflow для копирования Mini App версии

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           mkdir -p docs
           cp README.md docs/
-          # НЕ копируем корневой index.html - используем только docs/index.html
+          # Копируем Telegram Mini App версию
+          cp docs/telegram-app.html docs/
           cp CNAME docs/
           touch docs/.nojekyll
           
