🔒 езопасность: скрытие токена бота от публичного доступа
- обавлена поддержка config_local.py для локальных настроек
- бновлен .gitignore для исключения чувствительных данных
- бран токен из основного config.py
- бновлен env_example.txt с правильным доменом
- обавлена безопасная загрузка конфигурации в bot.py

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ venv.bak/
 .env.production
 .envrc
 
+# Local configuration (contains sensitive data)
+config_local.py
+
 # Database
 *.db
 *.sqlite
