--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 # Python
 __pycache__/
-*.py[codz]
+*.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,37 +16,35 @@ parts/
 sdist/
 var/
 wheels/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# Virtual Environment
+# Virtual environments
 venv/
 env/
 ENV/
 env.bak/
 venv.bak/
-.venv
 
 # Environment variables
 .env
 .env.local
-.env.production
-.envrc
-
-# Local configuration (contains sensitive data)
-config_local.py
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
+farm_game.db
 
 # Logs
 *.log
 logs/
+log/
 
 # IDE
 .vscode/
@@ -61,90 +55,53 @@ logs/
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
-
-# Ngrok
-ngrok.exe
-ngrok.zip
 
 # Temporary files
 *.tmp
 *.temp
+*.bak
+*.backup
+
+# Certificates
+*.pem
+*.key
+*.crt
+*.csr
+
+# Ngrok (больше не используется)
+# .ngrok2/
+# ngrok.yml
+
+# Flask
+instance/
+.webassets-cache
 
 # Coverage reports
 htmlcov/
+.tox/
 .coverage
 .coverage.*
+.cache
+nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
-.tox/
-.nox/
-.cache
-nosetests.xml
-*.py.cover
-cover/
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-local_settings.py
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
 
 # pyenv
 .python-version
 
 # pipenv
 Pipfile.lock
-
-# UV
-uv.lock
-
-# poetry
-poetry.lock
-poetry.toml
-
-# pdm
-pdm.lock
-pdm.toml
-.pdm-python
-.pdm-build/
-
-# pixi
-pixi.lock
-.pixi
 
 # PEP 582
 __pypackages__/
@@ -170,36 +127,3 @@ celerybeat.pid
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-.idea/
-
-# Abstra
-.abstra/
-
-# Visual Studio Code
-.vscode/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
-
-# Cursor
-.cursorignore
-.cursorindexingignore
-
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
