Update project files and configurations

--- a/.env.backup
+++ b/.env.backup
@@ -2,7 +2,7 @@
 BOT_TOKEN=7365507571:AAF-yfCzw64IDiejdap50RwCHYo1s-3Xntk
 
 # URL вашего веб-приложения (после деплоя)
-WEBAPP_URL=http://localhost:5000
+WEBAPP_URL=https://antoged.github.io/farming-game/
 
 # Настройки базы данных (опционально)
 DATABASE_PATH=farm_game.db
