--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,45 +3,36 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Checkout
+        uses: actions/checkout@v4
         
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
         
-    - name: Create static site
-      run: |
-        mkdir -p docs
-        cp README.md docs/
-        cp index.html docs/
-        cp CNAME docs/
-        
-        if [ -d "templates" ]; then
-          cp -r templates docs/
-        fi
-        
-        if [ -d "static" ]; then
-          cp -r static docs/
-        fi
-        
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
+      - name: Build
+        run: |
+          mkdir -p docs
+          cp index.html docs/
+          cp telegram-app.html docs/
+          cp README.md docs/
+          cp CNAME docs/
+          touch docs/.nojekyll
+          echo "✅ Сайт собран"
+          
+      - name: Deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
